--- a/blogs/kubernetesmarch2023.html
+++ b/blogs/kubernetesmarch2023.html
@@ -32,7 +32,7 @@
             <nav-bar></nav-bar>
 
             <div>
-                <h1>Setting up a home Kubernetes Cluster using Ubuntu 22.04 and Kubeadm</h1>
+                <h1>Setting up a Home Kubernetes Cluster using Ubuntu 22.04 and Kubeadm</h1>
                 <p><i>26th March 2023</i></p>
                 
                 <p>
@@ -47,7 +47,7 @@
                 <h3>Preliminaries</h3>
                 <p>
                   A cluster is, by definition, composed of multiple nodes.
-                  You can can of course use Raspberry Pis, but I wanted something slightly more powerful, so I want to share the following "top tip".
+                  You can of course use Raspberry Pis, but I wanted something slightly more powerful, so I want to share the following "top tip".
                   In Bristol, UK, there is a shop called <a href="https://bristolwastecompany.co.uk/reuse/">Reuse</a> who take stuff that people have thrown away at the dump and sell it for pennies.
                   For whatever reason, local companies throw away all sorts of perfectly good hardware, and I've been able to pick up a few reasonable machines on the cheap.
                   Are they reliable? Probably not, but running apps reliably on top of cheap, unreliable hardware is the whole point of Kubernetes.
