--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div>
                 <h1>Latest</h1>
                 <ul>
-                    <!-- <li>
+                    <li>
                         <article-card title="Building LLM Agents Series " started="Started January 2024"
-                            description="A series of articles on wiring up LLMs to bots in minecraft to have them perform tasks in the game. We'll also cover the Voyager paper."
+                            description="A series of articles on building embodied LLM agents in Minecraft. Rather than a how-to this is more of a documented journey of discovery where I try things out to see what works. We'll build up to the Voyager paper."
                             image-src="/images/headers/llm_agents.png" url="llm_agents.html" />
                     </li>
                     <br />
-                    <hr> -->
+                    <hr>
                     <li>
                         <article-card title="System Design Series (2 articles)" started="Started January 2024"
                             description="After moving up to lead the data platform team at Vaarst, I began to encounter and solve interesting problems in the design of large cloud based data systems. This series of articles documents some of the more interesting ones."
