--- a/llm_agents.html
+++ b/llm_agents.html
@@ -5,9 +5,9 @@
     <head>
         <meta charset="utf-8">
         <title>LLM Agent Series</title>
-        <meta name="description" content="Machine Learning articles.">
+        <meta name="description" content="LLM Agents.">
         <meta name="author" content="Harry Turner">
-        <meta name="keywords" content="machine learning, deep learning, object detection">
+        <meta name="keywords" content="machine learning, deep learning, llm, minecraft, agents">
         <link rel="icon" type="image/ico" href="images/favicon.ico">
         <link href="styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
@@ -38,26 +38,23 @@
                 <h1>LLM Agents Series</h1>
 
                 <p>
-                    Something I've wanted to do for a long time is explore the use of Large Language Models in the
-                    construction of autonomous agents, where you
-                    use the LLM as the "brain" and build scaffolding around it to let it interact with the world. In
-                    this case that world is minecraft, partly
-                    because there are already tools for creating bots for the game, and partly because the Voyager paper
-                    deployed LLM agents into minecraft. There's
-                    also something really quite satisfying about watching your agent explore a proper 3D world.
+                    This series documents my journey in learning to build embodied LLM agents in Minecraft. This is not
+                    a how-to article. I don't know how best to build these agents. But I hope to figure it out by
+                    building lots of them and seeing what works. If you follow along you'll see me make many mistakes and
+                    go down plenty of rabbit holes, but hopefully we'll see a picture begin to emerge. My goal is to
+                    work towards a foundational understanding of the state of the art, notably the Voyager paper.
                 </p>
                 <p>
-                    I've only just started in this space, so expect more content to follow soon. The rough guide will be
-                    to start with a simple environment that we
-                    can use to control the agent, and then we'll build up the complexity of the agent's tasks. Finally
-                    we'll look at the Voyager paper itself.
+                    Why Minecraft? Because it's what the Voyager paper uses, and there are already good tools for
+                    building bots for Minecraft, I do not intend to reinvent the wheel. There's also something deeply
+                    satisfying about watching your agents explore a proper 3D world.
                 </p>
                 <br />
                 <ul>
                     <li>
-                        <article-card title="Setting up the Playground" started="Started January 2024" description="To begin, we'll setup Minecraft, Mineflayer, and build a simple server for controlling the agent. 
-                            This will let us get up and running quickly whilst understanding fully what is going on."
-                            image-src="images/headers/llm_agents.png" url="articles/llm_playground.html" />
+                        <article-card title="Part 1 - A Basic Loop" started="Started January 2024"
+                                                                    description="This first post is about getting <i>something</i> up and running, a simple Sense, Think, Act loop so that we have something to build upon in future posts. Includes setting up Minecraft, the Node.js agent for sensing and interacting with the world, and a basic LLM powered controller. We end up with a bot that can run around the world and talk to us."
+                            image-src="images/headers/llm_agents.png" url="articles/playground.html" />
 
                     </li>
 
