Add site link checker and fix broken links.

--- a/pages/object_detection/multibox.html
+++ b/pages/object_detection/multibox.html
@@ -51,7 +51,7 @@
                     look at the architectures of YOLO, SSD, and RetinaNet, and how and why they're different to
                     their two stage cousins. This may be the
                     first post you're reading on my website, or perhaps you've already read through the
-                    <a href="https://www.harrysprojects.com/machine_learning.html">two-stage object detector series</a>.
+                    <a href="https://www.harrysprojects.com/pages/object_detection.html">two-stage object detector series</a>.
                     Either way, I will assume that you are familiar with two-stage detectors, because in the
                     upcoming posts I will be referring to ideas I've discussed in previous articles and I want to draw
                     connections between one-stage and two-stage architectures in particular. If you're already
