--- a/pages/active_learning/artificial.html
+++ b/pages/active_learning/artificial.html
@@ -130,7 +130,7 @@
                     shown below. The dataset I used has 375 images with ships in them, and 375 images without.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_1.png"/>
+                    <img src="/images/active_learning/artificial/gad_1.png"/>
                     <p><i>A selection of example images from the dataset.</i></p>
                 </div>
                 <h3>The Baseline</h3>
@@ -159,7 +159,7 @@
                     tough to beat.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_2.png"/>
+                    <img src="/images/active_learning/artificial/gad_2.png"/>
                     <p><i>Confusion matrix for a classifier trained on real training data.</i></p>
                 </div>
                 <h3>Testing the Setup</h3>
@@ -184,7 +184,7 @@
                     To test the pipeline, I wrote a very quick generation function that simply generated black images. Running the pipeline gave me the confusion matrix below. The confusion matrix is telling me that an image classifier that has been trained on black images basically classifies everything it sees as “not containing a ship“. Fair enough.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_3.png"/>
+                    <img src="/images/active_learning/artificial/gad_3.png"/>
                     <p><i>Confusion matrix for a classifier trained on black images.</i></p>
                 </div>
                 <p>
@@ -196,7 +196,7 @@
                     My generation algorithm needed to generate two kinds of image, one with a ship in it, labelled “ship”, and one without, labelled “none”. Look again at what the real images look like, because my generator is going to try and replicate them.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_4.png"/>
+                    <img src="/images/active_learning/artificial/gad_4.png"/>
                     <p><i>A selection of example images from the dataset.</i></p>
                 </div>
                 <p>
@@ -217,18 +217,18 @@
                     I then wrote a generation algorithm based on those criteria. If you want to see how the generation algorithm works, it’s all in the code. The easiest way to understand it however is to visualise the images that come out of it! Below, I’ve shown two sets of images, one for images of classification “none”, and one for images of classification “ship“.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_5.png"/>
+                    <img src="/images/active_learning/artificial/gad_5.png"/>
                     <p><i>Set of basic artificial training images, of classification “none”.</i></p>
                 </div>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_6.png"/>
+                    <img src="/images/active_learning/artificial/gad_6.png"/>
                     <p><i>Set of basic artificial training images, of classification “ship”.</i></p>
                 </div>
                 <p>
                     They’re not very good ships, I’ll admit. But I was curious to see whether the simple presence of a block of colour, in the middle of a uniformly coloured sea, would be enough for the model to begin to detect ships. Sure enough, if you look at the confusion matrix below, you can see that it is. In fact, it’s so effective, that for every single image that is a true “ship“, the model predicts it to be so. Unfortunately, it now appears to be biased in favour of ships, since it’s also miss-classifying 142 images as ships, when they’re not. Still, the results are promising.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_7.png"/>
+                    <img src="/images/active_learning/artificial/gad_7.png"/>
                     <p><i>Confusion matrix for a classifier trained on basic artificial images.</i></p>
                 </div>
                 <h3>A Second Pass</h3>
@@ -236,18 +236,18 @@
                     Time to improve it! I added new functionality to the generation algorithm, so that it adds clouds, has more representative colours, and creates more realistic looking ships. As usual, the easiest way to understand what it is doing is to visualise the output, see below!
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_8.png"/>
+                    <img src="/images/active_learning/artificial/gad_8.png"/>
                     <p><i>Set of improved artificial training images, of classification “none”, including better clouds, and more representative colours.</i></p>
                 </div>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_9.png"/>
+                    <img src="/images/active_learning/artificial/gad_9.png"/>
                     <p><i>Set of improved artificial training images, of classification “ship”, including more representative colours, better clouds, and better ship shapes.</i></p>
                 </div>
                 <p>
                     As usual, I ran the pipeline and looked at the confusion matrix, shown below. Simply adding those new features has drastically improved the performance of the classifier, at the expense of now miss-classifying a few ships. It’s encouraging that it’s doing such a good job, considering that it’s never seen a true image during it’s training.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_10.png"/>
+                    <img src="/images/active_learning/artificial/gad_10.png"/>
                     <p><i>Confusion matrix for a classifier trained on improved artificial images.</i></p>
                 </div>
                 <h3>A Third and Final Pass</h3>
@@ -258,22 +258,22 @@
                     Firstly, as a sanity check, I’ve plotted images that the classifier got correct, and was also very confident in it’s prediction. Note that the numbers above the images represent the probability of an image being of class “ship”.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_11.png"/>
+                    <img src="/images/active_learning/artificial/gad_11.png"/>
                     <p><i>Images of “none” that the classifier got correct, and was highly confident.</i></p>
                 </div>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_12.png"/>
+                    <img src="/images/active_learning/artificial/gad_12.png"/>
                     <p><i>Images of “ship” that the classifier got correct, and was highly confident.</i></p>
                 </div>
                 <p>
                     That’s exactly what I expected which is good. It’s much more informative however to plot images that the classifier got wrong, but was also very confident in it’s predictions. In other words, which images did the classifier get the most wrong.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_13.png"/>
+                    <img src="/images/active_learning/artificial/gad_13.png"/>
                     <p><i>Images of “none” that the classifier got wrong, and was highly confident.</i></p>
                 </div>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_14.png"/>
+                    <img src="/images/active_learning/artificial/gad_14.png"/>
                     <p><i>Images of “ship” that the classifier got wrong, and was highly confident.</i></p>
                 </div>
                 <p>
@@ -292,18 +292,18 @@
                     From these points, I refined my generation algorithm to generate more cloud cover, and a wider variety of ship shapes. I also generated 10,000 images, rather than 1000 images, which is what I’d been generating so far. As usual, a sample of the output from the generation algorithm is shown below.
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_15.png"/>
+                    <img src="/images/active_learning/artificial/gad_15.png"/>
                     <p><i>Set of best artificial training images, of classification “none”, including better clouds.</i></p>
                 </div>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_16.png"/>
+                    <img src="/images/active_learning/artificial/gad_16.png"/>
                     <p><i>Set of best artificial training images, of classification “ship”, including better clouds, and better ship shapes.</i></p>
                 </div>
                 <p>
                     As usual, I ran the pipeline and got the confusion matrix below. The classifier now only miss-classifies 14 images out of 650, an accuracy of almost 98%. Not bad considering it’s never seen a real image!
                 </p>
                 <div class="image-container">
-                    <img src="../images/projects/artificial/gad_17.png"/>
+                    <img src="/images/active_learning/artificial/gad_17.png"/>
                     <p><i>Confusion matrix for a classifier trained on the best artificial images.</i></p>
                 </div>
                 <br />
