Update all google tag analytics for GA4.

--- a/pages/virtues.html
+++ b/pages/virtues.html
@@ -1,64 +1,104 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Books</title>
-        <meta name="description" content="List of Books.">
-        <meta name="author" content="Harry Turner">
-        <meta name="keywords" content="harrys projects, books">
-        <link rel="icon" type="image/ico" href="images/favicon.ico">
-        <link href="styles/styles.css" type="text/css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
-        <link rel=“canonical” href=“https://www.harrysprojects.com/books.html” />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="js/Navbar.js" type="text/javascript" defer></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+  <head>
+    <meta charset="utf-8" />
+    <title>Books</title>
+    <meta name="description" content="List of Books." />
+    <meta name="author" content="Harry Turner" />
+    <meta name="keywords" content="harrys projects, books" />
+    <link rel="icon" type="image/ico" href="images/favicon.ico" />
+    <link href="styles/styles.css" type="text/css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel=“canonical” href=“https://www.harrysprojects.com/books.html” />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="js/Navbar.js" type="text/javascript" defer></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-X5NEKXRJE4"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-          gtag('config', 'UA-180754451-1');
-        </script>
-    </head>
-    <body>
-        <div class="page-container">
+      gtag("config", "G-X5NEKXRJE4");
+    </script>
+  </head>
+  <body>
+    <div class="page-container">
+      <nav-bar></nav-bar>
 
-            <nav-bar></nav-bar>
+      <div>
+        <h1>My Virtues Privacy Policy</h1>
 
-            <div>
-                <h1>My Virtues Privacy Policy</h1>
+        <h3>Effective Date: 14th November 2023</h3>
 
-                <h3>Effective Date: 14th November 2023</h3>
+        <h3>Introduction</h3>
+        <p>
+          This Privacy Policy applies to the Virtue Tracker mobile application
+          ("App"), developed by [Your Developer Name or Company Name]. As an
+          independent developer, I am committed to protecting the privacy of all
+          users of the App. This policy outlines the types of information that
+          is received and collected by the App and how it is used.
+        </p>
 
-                <h3>Introduction</h3>
-                <p>This Privacy Policy applies to the Virtue Tracker mobile application ("App"), developed by [Your Developer Name or Company Name]. As an independent developer, I am committed to protecting the privacy of all users of the App. This policy outlines the types of information that is received and collected by the App and how it is used.</p>
+        <h3>Information Collection and Use</h3>
+        <p>
+          The Virtue Tracker App is designed to store all user data locally on
+          the user's device. The App does not collect, use, store, or transmit
+          any personal data. There is no server or API that interacts with user
+          data, and no personal data is shared with third parties.
+        </p>
 
-                <h3>Information Collection and Use</h3>
-                <p>The Virtue Tracker App is designed to store all user data locally on the user's device. The App does not collect, use, store, or transmit any personal data. There is no server or API that interacts with user data, and no personal data is shared with third parties.</p>
+        <h3>No Login Required</h3>
+        <p>
+          The App does not require users to create an account or log in with
+          personal information. All features are available without any form of
+          user registration.
+        </p>
 
-                <h3>No Login Required</h3>
-                <p>The App does not require users to create an account or log in with personal information. All features are available without any form of user registration.</p>
+        <h3>Local Storage</h3>
+        <p>
+          All data related to the tracking of virtues and user-customized
+          settings are stored locally on the user's device. The data is not
+          backed up or transmitted to any external servers or cloud services.
+        </p>
 
-                <h3>Local Storage</h3>
-                <p>All data related to the tracking of virtues and user-customized settings are stored locally on the user's device. The data is not backed up or transmitted to any external servers or cloud services.</p>
+        <h3>Data Security</h3>
+        <p>
+          As an independent developer, I take the security of your data
+          seriously. However, please note that no method of electronic storage
+          is 100% secure. While I strive to use commercially acceptable means to
+          protect your personal information, I cannot guarantee its absolute
+          security.
+        </p>
 
-                <h3>Data Security</h3>
-                <p>As an independent developer, I take the security of your data seriously. However, please note that no method of electronic storage is 100% secure. While I strive to use commercially acceptable means to protect your personal information, I cannot guarantee its absolute security.</p>
+        <h3>Changes to This Privacy Policy</h3>
+        <p>
+          This Privacy Policy may be updated from time to time. I will notify
+          you of any changes by posting the new Privacy Policy on this page. You
+          are advised to review this Privacy Policy periodically for any
+          changes.
+        </p>
 
-                <h3>Changes to This Privacy Policy</h3>
-                <p>This Privacy Policy may be updated from time to time. I will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.</p>
-
-                <h3>Contact Information</h3>
-                <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at [Your Contact Email].</p>
-
-            </div>
-
-        </div>
-    </body>
-    <footer>
-    </footer>
+        <h3>Contact Information</h3>
+        <p>
+          If you have any questions or suggestions about my Privacy Policy, do
+          not hesitate to contact me at [Your Contact Email].
+        </p>
+      </div>
+    </div>
+  </body>
+  <footer></footer>
 </html>
