--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <script src="js/Navbar.js" type="text/javascript" defer></script>
         <script src="js/ArticleCard.js" type="text/javascript" defer></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5NEKXRJE4"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
 
-            gtag('config', 'UA-180754451-1');
+            gtag('config', 'G-X5NEKXRJE4');
         </script>
     </head>
 
