--- a/pages/active_learning/artificial.html
+++ b/pages/active_learning/artificial.html
@@ -26,13 +26,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../../js/Navbar.js" type="text/javascript" defer></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5NEKXRJE4"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'UA-180754451-1');
+          gtag('config', 'G-X5NEKXRJE4');
         </script>
     </head>
     <body>
