--- a/pages/miscellaneous/efficientnetx.html
+++ b/pages/miscellaneous/efficientnetx.html
@@ -30,13 +30,13 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="../../js/Navbar.js" type="text/javascript" defer></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5NEKXRJE4"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 s
-          gtag('config', 'UA-180754451-1');
+          gtag('config', 'G-X5NEKXRJE4');
         </script>
     </head>
     <body>
