--- a/pages/object_detection/fastrcnn.html
+++ b/pages/object_detection/fastrcnn.html
@@ -42,7 +42,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"
+      src="https://www.googletagmanager.com/gtag/js?id=G-X5NEKXRJE4"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -51,7 +51,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-180754451-1");
+      gtag("config", "G-X5NEKXRJE4");
     </script>
   </head>
   <body>
