Update content on continuum header link.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <article-card
               title="Continuum"
               started="March 2024"
-              description="Continuum is an AI powered journal that uses large language models to analyse thinking patterns and organise ideas. It's a tool I use daily for jotting down notes related to my work and personal projects. The weekly auto-generated report keeps me on top of things.  "
+              description="An AI powered journal that uses large language models to analyse thinking patterns and organise ideas. It's a tool I use daily for jotting down notes related to my work and personal projects. Built in Django & React. Deployed to AWS.  "
               image-src="/images/headers/continuum.png"
               url="https://app.continuum-journal.com"
             />
